@@ -33,6 +33,8 @@ v0.20 alpha,
 			- ProductionNode
 			- Generator
 			- UserGenerator
+		- Added AlternativeViewpoint capability, see: examples/SimpleOpenNI/AlternativeViewPoint3d
+		  The method 'alternativeViewPointDepthToImage()' aligns the Depth with the Image data
 		- Added Nite extensions XnVPushDetector/XnVSwipeDetector from David Buchman. Had to change it a bit, due to changes
 		  of Nite in the current version, this functions where removed:
 			SetSteadyMaxVelocity
